--- a/html/index.html
+++ b/html/index.html
@@ -6,9 +6,14 @@
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel="stylesheet" href="./css/style.css">
     <script src='main.js'></script>
 </head>
 <body>
+    <Header>
+         <h1>RemRoll</h1>   
+    </Header>
+    
     hola mundo rama secundaria
     hola mundo rama chacana
 </body>
