--- a/html/index.html
+++ b/html/index.html
@@ -10,11 +10,11 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <Header>
+    <Header class="headerazul">
          <h1>RemRoll</h1>   
     </Header>
-    
-    hola mundo rama secundaria
-    hola mundo rama chacana
+    <nav class="navverde">   
+    <a href="./Empleados.html">Lista de Empleados</a>
+    </nav>
 </body>
-</html></html>
+</html>
