--- a/html/index.html
+++ b/html/index.html
@@ -10,11 +10,13 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <Header class="headerazul">
+    <Header class="fazul">
          <h1>RemRoll</h1>   
     </Header>
-    <nav class="navverde">   
-    <a href="./Empleados.html">Lista de Empleados</a>
+    <nav>   
+        <div class="fverde">
+            <a href="./Empleados.html">Lista de Empleados</a>
+        </div>
     </nav>
 </body>
 </html>
