--- a/html/index.html
+++ b/html/index.html
@@ -13,10 +13,41 @@
     <Header class="fazul">
          <h1>RemRoll</h1>   
     </Header>
-    <nav>   
-        <div class="fverde">
-            <a href="./Empleados.html">Lista de Empleados</a>
+    <div id="wrapper">
+        <div id="first">
+            <section class="loginad">
+                <h1 class="titulo">Login Administrador</h1>
+                <article>
+                    <p class="centrado">Usuario</p>
+                    <input class="tcentrado" type="text" id="usuario">
+                </article>
+                <article>
+                    <p class="centrado">Contraseña</p>
+                    <input class="tcentrado" type="text" id="contraseña" >
+                </article><br>
+                <article>
+                    <button class="centrado"><a href="./Empleados.html">Ingresar</a></button>
+                </article>
+            </section>
         </div>
-    </nav>
+        <div id="second">
+            <section class="loginad">
+                <h1 class="titulo">Login Empresa-Cliente</h1>
+                <article>
+                    <p class="centrado">Usuario</p>
+                    <input class="tcentrado" type="text" id="usuario">
+                </article>
+                <article>
+                    <p class="centrado">Contraseña</p>
+                    <input class="tcentrado" type="text" id="contraseña">
+                </article><br>
+                <article>
+                    <button class="centrado"><a href="./Empleados.html">Ingresar</a></button>
+                </article>
+            </section>
+        </div>
+    </div>
+    
+  
 </body>
 </html>
