--- a/html/Empleadosec.html
+++ b/html/Empleadosec.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header>
+        <h1>Tabla de Empleados</h1>
         <div>
             <p>Filtro 
               <select name="select">
@@ -18,12 +19,8 @@
                 <option value="value2">Numero</option>
                 <option value="value3">Direccion</option> 
               </select> 
-            </p>
-            <p>Buscar por Numero 
-                <input type="text" id="text1">
-            </p> 
-            <p>Buscar por Direccion 
-                <input type="text" id="text2">
+              <input type="text" id="text1">
+              <button>Filtrar</button>
             </p>
         </div>
     </header>
@@ -49,12 +46,11 @@
           <td>Chile,Santiago,Desconocido</td>
         </tr>
         <tr>
-          <td><input type="checkbox" id="cbox1">Patricio ogaz</td>
+          <td><input type="checkbox" id="cbox1">Patricio Ogaz</td>
           <td>985674521</td>
-          <td>Infierno,7mo circulo</td>
+          <td>Chile,Santiago,Desconocido</td>
         </tr>
-      </table>
-      
-      </body>
+      </table><br>
+      <button><a href="./index.html">Cerrar Sesion</a></button>
 </body>
 </html>
