--- a/html/index.html
+++ b/html/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./css/style.css">
     <script src='main.js'></script>
 </head>
-<body>
+<body class="bodyindex">
     <Header class="fazul">
-         <h1>RemRoll</h1>   
+         <h1 class="remroll">RemRoll</h1>   
     </Header>
     <div id="wrapper">
         <div id="first">
@@ -26,7 +26,7 @@
                     <input class="tcentrado" type="text" id="contraseña" >
                 </article><br>
                 <article>
-                    <button class="centrado"><a href="./Empleados.html">Ingresar</a></button>
+                    <button class="centrado"> <a href="./Empleadosad.html">Ingresar</a></button>
                 </article>
             </section>
         </div>
@@ -42,7 +42,7 @@
                     <input class="tcentrado" type="text" id="contraseña">
                 </article><br>
                 <article>
-                    <button class="centrado"><a href="./Empleados.html">Ingresar</a></button>
+                    <button class="centrado"><a href="./Empleadosec.html">Ingresar</a></button>
                 </article>
             </section>
         </div>
