--- a/html/popupm.html
+++ b/html/popupm.html
@@ -12,7 +12,7 @@
 <body>
     <div class="window-notice" id="window-notice">
         <div class="content">
-            <div class="content-text">Panel de modificacion
+            <div class="content-text"><h2>Panel de Modificaciones</h2>
                 <p>Nombre <input type="text"></p>
                 <p>Telefono <input type="text"></p>
                 <p>Direccion <input type="text"></p>
