--- a/html/Empleadosad.html
+++ b/html/Empleadosad.html
@@ -60,7 +60,7 @@
           <td><button><a href="./popupm.html">Modificar</a></button> </td>
         </tr>
       </table>
-      <h2>Mantenedor de Empleados</h2>
+      <h2>Parametros de Remuneracion</h2>
       <table>
           <tr>
               <th>Nombre</th>
