barra de navegacion y reorganizacion

--- a/html/index.html
+++ b/html/index.html
@@ -26,7 +26,7 @@
                     <input class="tcentrado" type="text" id="contraseña" >
                 </article><br>
                 <article>
-                    <button class="centrado"> <a href="./Empleadosad.html">Ingresar</a></button>
+                    <button class="centrado"> <a href="./tablasempleados.html">Ingresar</a></button>
                 </article>
             </section>
         </div>
