--- a/html/popupa.html
+++ b/html/popupa.html
@@ -12,8 +12,8 @@
 <body>
     <div class="window-notice" id="window-notice">
         <div class="content">
-            <div class="content-text">El usuario Ha sido Eliminado 
-            <div class="content-buttons"><a href="./Mantenedor.html" id="close-button">Aceptar</a></div>
+            <div class="content-text">El usuario Ha sido Agregado 
+            <div class="content-buttons"><a href="./agregar.html" id="close-button">Aceptar</a></div>
         </div>
     </div>
 </body>
