--- a/html/popupm.html
+++ b/html/popupm.html
@@ -12,11 +12,17 @@
 <body>
     <div class="window-notice" id="window-notice">
         <div class="content">
-            <div class="content-text"><h2>Panel de Modificaciones</h2>
+            <header><h2>Panel de Modificaciones</h2></header>
+            <div class="content-text">
                 <p>Nombre <input type="text"></p>
                 <p>Telefono <input type="text"></p>
                 <p>Direccion <input type="text"></p>
-            <div class="content-buttons"><a href="./Empleadosad.html" id="close-button">Modificar</a></div>
+                <p>Sueldo bruto <input type="text"></p>
+                <p>Prevision <input type="text"></p>
+                <p>Imposiciones <input type="text"></p>
+                <p>Bono transporte <input type="text"></p>
+                <p>Bonos adicionales <input type="text"></p>
+            <div class="content-buttons"><a href="./Mantenedor.html" id="close-button">Modificar</a></div>
         </div>
     </div>
 </body>
