--- a/html/Empleadosad.html
+++ b/html/Empleadosad.html
@@ -11,6 +11,14 @@
 </head>
 <body>
     <header>
+      <ul>
+        <li><a class="active" href="">Home</a></li>
+        <li><a href="#news">News</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#about">About</a></li>
+      </ul>
+      
+      <div style="margin-left:25%;padding:1px 16px;height:1000px;">
         <h1>Tabla de Empleados</h1>
         <div>
             <p>Filtro 
