--- a/html/agregar.html
+++ b/html/agregar.html
@@ -15,7 +15,9 @@
         <li><a href="tablasempleados.html">Tabla de Empleados</a></li>
         <li><a href="./mantenedor.html">Eliminar/Modificar</a></li>
         <li><a class="active" href="./agregar.html">Agregar</a></li>
+        <li><a href="cuenta.html">Datos de la cuenta</a></li>
         <li><a href="./index.html">Cerrar Sesion</a></li>
+
       </ul>
       <div style="margin-left:25%;padding:1px 16px;height:1000px;">
         <h1>Agregar Empleados</h1>
