--- a/html/mantenedor.html
+++ b/html/mantenedor.html
@@ -15,6 +15,7 @@
         <li><a href="tablasempleados.html">Tabla de Empleados</a></li>
         <li><a class="active" href="./mantenedor.html">Eliminar/Modificar</a></li>
         <li><a href="./agregar.html">Agregar</a></li>
+        <li><a href="cuenta.html">Datos de la cuenta</a></li>
         <li><a href="./index.html">Cerrar Sesion</a></li>
       </ul>
       
