--- a/html/tablasempleados.html
+++ b/html/tablasempleados.html
@@ -15,6 +15,7 @@
         <li><a class="active" href="tablasempleados.html">Tabla de Empleados</a></li>
         <li><a href="./mantenedor.html">Eliminar/Modificar</a></li>
         <li><a href="./agregar.html">Agregar</a></li>
+        <li><a href="cuenta.html">Datos de la cuenta</a></li>
         <li><a href="./index.html">Cerrar Sesion</a></li>
       </ul>
       <div style="margin-left:25%;padding:1px 16px;height:1000px;">
