cambios de estilo

--- a/html/agregar.html
+++ b/html/agregar.html
@@ -10,7 +10,7 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <header>
+    <header style="background-image: url('./img/oficina.jpg');background-repeat: no-repeat;">
       <ul>
         <li><a href="tablasempleados.html">Tabla de Empleados</a></li>
         <li><a href="./mantenedor.html">Eliminar/Modificar</a></li>
@@ -69,7 +69,7 @@
                 </section>
             </div>
             <div>
-                <section style="margin-left: 30px;margin-top: 46px;">
+                <section style="margin-left: 30px;margin-top: 135px;">
                     <article>
                         <p class="centrado">Bonos adicionales</p>
                         <input class="tcentrado" type="text" id="nombre">
