quitar imagen de fondo en eliminar/modificar

--- a/html/mantenedor.html
+++ b/html/mantenedor.html
@@ -10,7 +10,7 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <header style="background-image: url('./img/oficina.jpg');background-repeat: no-repeat;">
+    <header>
       <ul>
         <li><a href="tablasempleados.html">Tabla de Empleados</a></li>
         <li><a class="active" href="./mantenedor.html">Eliminar/Modificar</a></li>
