--- a/html/agregar.html
+++ b/html/agregar.html
@@ -7,19 +7,19 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/ jquery-validation@1.19.3 /dist/jquery.validate.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ jquery-validation@1.19.3 /dist/jquery.validate.min.js"></script>
     <script src='main.js'></script>
 </head>
 <body>
-    <header style="background-image: url('./img/oficina.jpg');background-repeat: no-repeat;">
       <ul>
         <li><a href="tablasempleados.html">Tabla de Empleados</a></li>
-        <li><a href="./mantenedor.html">Eliminar/Modificar</a></li>
         <li><a class="active" href="./agregar.html">Agregar</a></li>
         <li><a href="cuenta.html">Datos de la cuenta</a></li>
         <li><a href="./index.html">Cerrar Sesion</a></li>
 
       </ul>
-      <div style="margin-left:25%;padding:1px 16px;height:1000px;">
+      <div style="margin-left:15%;padding:1px 16px;height:100%;">
         <h1>Agregar Empleados</h1>
         <div id="wrapper">
             <div id="first">
@@ -80,6 +80,5 @@
             </div>
         </div>
         <button style="margin-top: 40px;margin-left: 400px;"><a href="./popupa.html">Agregar</a></button>
-    </header>
 </body>
 </html>
