--- a/html/tablasempleados.html
+++ b/html/tablasempleados.html
@@ -10,79 +10,86 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <header>
-      <ul>
-        <li><a class="active" href="tablasempleados.html">Tabla de Empleados</a></li>
-        <li><a href="./mantenedor.html">Eliminar/Modificar</a></li>
-        <li><a href="./agregar.html">Agregar</a></li>
-        <li><a href="cuenta.html">Datos de la cuenta</a></li>
-        <li><a href="./index.html">Cerrar Sesion</a></li>
-      </ul>
-      <div style="margin-left:25%;padding:1px 16px;height:1000px;">
-        <h1>Tabla de Empleados</h1>
-        <div>
-            <p>Filtro 
-              <select name="select">
-                <option value="value1">Nombre</option>
-                <option value="value2">Numero</option>
-                <option value="value3">Direccion</option> 
-              </select> 
-              <input type="text" id="text1">
-              <button>Filtrar</button>
-            </p>
-            <table>
-              <tr>
-                <th>Nombre</th>
-                <th>Telefono</th>
-                <th>Direccion</th>
-                <th>Sueldo bruto</th>
-                <th>Prevision</th>
-                <th>Imposiciones</th>
-                <th>Bono transporte</th>
-                <th>Bonos Adicionales</th>
-              </tr>
-              <tr>
-                <td>Kevin del rio</td>
-                <td>988987646</td>
-                <td>Chile,Santiago,Quilicura</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-              </tr>
-              <tr>
-                <td>Diego Chacana</td>
-                <td>949484814</td>
-                <td>Chile,Santiago,Quilicura</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-              </tr>
-              <tr>
-                <td>Ricardo Salas</td>
-                <td>985475462</td>
-                <td>Chile,Santiago,Desconocido</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-              </tr>
-              <tr>
-                <td>Patricio Ogaz</td>
-                <td>985674521</td>
-                <td>Chile,Santiago,Desconocido</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-              </tr>
-            </table>
-        </div>
-    </header>
+  <ul>
+    <li><a class="active" href="tablasempleados.html">Tabla de Empleados</a></li>
+    <li><a href="./agregar.html">Agregar</a></li>
+    <li><a href="cuenta.html">Datos de la cuenta</a></li>
+    <li><a href="./index.html">Cerrar Sesion</a></li>
+  </ul>
+  <div style="margin-left:15%;padding:1px 16px;height:1000px;">
+    <h1>Tabla de Empleados</h1>
+    <div>
+      <p>Filtro 
+        <select name="select">
+          <option value="value1">Nombre</option>
+          <option value="value2">Numero</option>
+          <option value="value3">Direccion</option> 
+        </select> 
+        <input type="text" id="text1">
+        <button>Filtrar</button>
+      </p>
+      <table>
+        <tr>
+          <th>Nombre</th>
+          <th>Telefono</th>
+          <th>Direccion</th>
+          <th>Sueldo bruto</th>
+          <th>Prevision</th>
+          <th>Imposiciones</th>
+          <th>Bono transporte</th>
+          <th>Bonos adicionales</th>
+          <th colspan="2">Accion</th>
+        </tr>
+        <tr>
+          <td>Kevin del rio</td>
+          <td>988987646</td>
+          <td>Chile,Santiago,Quilicura</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td><button><a href="./popupe.html">Eliminar</a></button> </td>
+          <td><button><a href="./popupm.html">Modificar</a></button> </td>
+        </tr>
+        <tr>
+          <td>Diego Chacana</td>
+          <td>949484814</td>
+          <td>Chile,Santiago,Quilicura</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td><button><a href="./popupe.html">Eliminar</a></button> </td>
+          <td><button><a href="./popupm.html">Modificar</a></button> </td>
+        </tr>
+        <tr>
+          <td>Ricardo Salas</td>
+          <td>985475462</td>
+          <td>Chile,Santiago,Desconocido</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td><button><a href="./popupe.html">Eliminar</a></button> </td>
+          <td><button><a href="./popupm.html">Modificar</a></button> </td>
+        </tr>
+        <tr>
+          <td>Patricio Ogaz</td>
+          <td>985674521</td>
+          <td>Chile,Santiago,Desconocido</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td><button><a href="./popupe.html">Eliminar</a></button> </td>
+          <td><button><a href="./popupm.html">Modificar</a></button> </td>
+        </tr>
+      </table><br>
+      <button><a href="./popupa.html">Agregar</a></button>
+  </div>
 </body>
 </html>
