--- a/html/index.html
+++ b/html/index.html
@@ -20,6 +20,15 @@
                 <input class="botones" type="submit" value="Ingresar">
         </form>
     </section>
+
+    <script>
+		var require = {
+			paths: {
+				"jquery": "../../lib/jquery-3.1.1"
+			}
+		};
+		</script>
+		<script src="../../lib/require.js" data-main="app.js"></script>
 </body>
 
 </html>
