--- a/html/Login.html
+++ b/html/Login.html
@@ -13,7 +13,9 @@
     <section class="formulario-login">
         <form class="cmxform" id="commentForm" method="get" action="./tablasempleados.html">
                 <h4>Login</h4>
+                <label for="nombre">Correo</label>
                 <input class="controles" type="email" name="nombre" id="nombre" minlength="2" placeholder="Ingrese su Correo" required>
+                <label for="nombre">Contraseña</label>
                 <input class="controles" type="password" name="nombre" id="nombre" minlength="6" placeholder="Ingrese su Contraseña" required>
                 <p>¿No tienes Cuenta?<a href=""> Registrarse</a></p>
                 <p>¿Olvidaste tu contraseña?<a href=""> Recuperar contraseña</a></p>
