--- a/html/Registro.html
+++ b/html/Registro.html
@@ -11,15 +11,18 @@
 </head>
 <body style="background-image: url(./img/fondo-login.jpg);background-size: 100%;" >
     <section class="formulario-login">
-        <form class="cmxform" id="commentForm" method="get" action="./tablasempleados.html">
-                <h4>Login</h4>
+        <form class="cmxform" id="commentForm" method="get" action="./Login.html">
+                <h4>Registro de Usuario</h4>
+                <label for="nombres">Nombre</label>
+                <input class="controles" type="text" name="nombres" id="nombres" minlength="2" placeholder="Ingrese su Nombre" required>
+                <label for="apellidos">Apellidos</label>
+                <input class="controles" type="text" name="apellidos" id="apellidos" minlength="2" placeholder="Ingrese sus Apellidos" required>
                 <label for="correo">Correo</label>
                 <input class="controles" type="email" name="correo" id="correo" minlength="2" placeholder="Ingrese su Correo" required>
                 <label for="contraseña">Contraseña</label>
                 <input class="controles" type="password" name="contraseña" id="contraseña" minlength="6" placeholder="Ingrese su Contraseña" required>
-                <p>¿No tienes Cuenta?<a href="./Registro.html"> Registrarse</a></p>
-                <p>¿Olvidaste tu contraseña?<a href=""> Recuperar contraseña</a></p>
-                <input class="botones" type="submit" value="Ingresar">
+                <input type="checkbox" name="tyc" id="tyc" required><label for="tyc"> Acepto los <a href="">Terminos y condiciones</a></label>
+                <input class="botones" type="submit" value="Registrarse">
         </form>
     </section>
 
