--- a/html/tablasempleados.html
+++ b/html/tablasempleados.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <script src='main.js'></script>
 </head>
-<body>
+<body style="background-image: url(./img/fondo-login.jpg);background-size: 100%;" >
   <ul>
     <li><a class="active" href="tablasempleados.html">Tabla de Empleados</a></li>
     <li><a href="./agregar.html">Agregar</a></li>
