--- a/html/Login.html
+++ b/html/Login.html
@@ -7,7 +7,8 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='./css/form-login.css'>
     <link rel="stylesheet" href="./css/form-login.css">
-    <script src='main.js'></script>
+    <script src='./js/login.js'></script>
+    <script src='./js/mantenedor.js'></script>
 </head>
 <body style="background-image: url(./img/fondo-login.jpg);background-size: 100%;" >
     <section class="formulario-login">
