--- a/html/Login.html
+++ b/html/Login.html
@@ -6,7 +6,7 @@
     <title>Login</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='./css/formulario-login.css'>
-    <link rel="stylesheet" href="./css/formulario-login.css">
+    <link rel="stylesheet" href="./css/formulario-login |.css">
     <script src='./js/login.js'></script>
     <script src='./js/mantenedor.js'></script>
 </head>
