--- a/html/Mantenedor.html
+++ b/html/Mantenedor.html
@@ -14,22 +14,20 @@
  <div id="wrapper">
    <div id="first">
       <div class="vertical-menu">
-        <a href="#" class="active">Administrar Empleados</a>
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
+        <a href="./cuenta.html">Perfil</a>
+        <a href="./Mantenedor.html" class="active">Administrar Empleados</a>
         <a href="./Login.html">Cerrar Sesion</a>
       </div>
    </div>
       <div id="second">
         <div style="margin: 12px;">
             <select name="select" class="filtro">
-              <option value="value1">Nombre</option>
-              <option value="value2">Numero</option>
+              <option selected value="value1">Nombre</option>
+              <option value="value2">Telefono</option>
               <option value="value3">Direccion</option> 
             </select> 
-            <input type="text" id="text1" class="filtro">
-            <button>Filtrar</button>
+            <input type="text" id="text1" class="filtro" placeholder="Ingrese aqui">
+            <button class="botones">Filtrar</button>
       </div>
       <table>
       <tr>
