--- a/html/cuenta.html
+++ b/html/cuenta.html
@@ -1,50 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <link rel="stylesheet" href="./css/style.css">
-    <script src='main.js'></script>
-</head>
-<body>
-    <header>
-        <ul>
-          <li><a href="tablasempleados.html">Tabla de Empleados</a></li>
-          <li><a href="./mantenedor.html">Eliminar/Modificar</a></li>
-          <li><a href="./agregar.html">Agregar</a></li>
-          <li><a class="active" href="cuenta.html">Datos de la cuenta</a></li>
-          <li><a href="./index.html">Cerrar Sesion</a></li>
-  
-        </ul>
-        <div style="margin-left:25%;padding:1px 16px;height:1200px;">
-            <h1>Datos de la cuenta</h1>
-            <div id="wrapper">
-                <div id="first">
-                    <section style="margin-left: 30px;">
-                        <h1 style="margin-left: 10px;">Datos actuales</h1>
-                        <article>
-                            <h3><p class="centrado">Nombre de usuario actual</p></h3>
-                            <p class="centrado" >di.chacana</p>
-                        </article>
-                        <article>
-                            <h3><p  style="color: rgb(57, 170, 35); margin-top: 80px; margin-left: 30px;" >MODIFICAR </p></h3>
-                            <button style="margin-top: 10px;margin-left: 30px;"><a href="./datos.html">cambiar datos</a></button>
-                        </article><br>
-                    </section>
-                </div>
-                <div>
-                    <section style="margin-left: 30px;margin-top: 66px;">
-                        <article>
-                            <h3><p class="centrado">Contraseña actual</p></h3>
-                            <p class="centrado">Colocolo33</p>
-                        </article><br>
-                    </section>
-                </div>
-            </div>
+    <head>
+        <meta charset='utf-8'>
+        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+        <title>Page Title</title>
+        <meta name='viewport' content='width=device-width, initial-scale=1'>
+        <link rel='stylesheet' type='text/css' media='screen' href='./css/Mantenedor.css'>
+        <link rel="stylesheet" href="./css/Mantenedor.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src='./js/mantenedor.js'></script>
+    </head>
+<body style="background-image: url(./img/fondo-login.jpg);background-size: 100%;">
+    <div id="wrapper">
+        <div id="first">
+           <div class="vertical-menu">
+             <a href="./cuenta.html" class = "active">Perfil</a>
+             <a href="./Mantenedor.html">Administrar Empleados</a>
+             <a href="./Login.html">Cerrar Sesion</a>
+           </div>
+        </div>
+        <div > <h1 style="margin-left: 150px;"> DATOS DE LA CUENTA </h1>
 
+         <table style="margin-left: 150px; margin-top: 100px; width: 75%; height: 200px;">
+            <tr>
+                <th>Nombre de usuario actual</th>
+                <th>Contraseña actual</th>
+                <th>Correo electronico</th>
+                <th>Celular/telefono</th>
+                <th>Tipo de cuenta</th>
+                <th ></th>
+              </tr>
+              <tr>
+                <td class="nombre">dichacana</td>
+                <td>*************</td>
+                <td>di.chacana@alumnos.duoc.cl</td>
+                <td>9 4948 4814</td>
+                <td>Administrador</td>
+                <td><a href="./datos.html" style="color: rgb(235, 245, 91);">Modificar</a></td>
+
+              </tr>
+            </div>      
+          </table>
         </div>
 </body>
 </html>
