--- a/html/datos.html
+++ b/html/datos.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Datos de cuenta</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel='stylesheet' type='text/css' media='screen' href='./css/formulario-login.css'>
+    <link rel="stylesheet" href="./css/formulario-login.css">
     <script src='main.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.js"></script>
 </head>
-<body>
-    <div class="window-notice" id="window-notice">
-        <div class="content">
-            <header><h2>Cmabiar datos de cuenta</h2></header>
-            <div class="content-text">
-                <p>Nombre de usuario nuevo <input type="text"></p>
-                <p>contraseña nueva <input type="text"></p>
-            <div class="content-buttons"><a href="./popupc.html" id="cuenta-button">Modificar</a></div>
-            <div class="content-buttons"><a href="./cuenta.html" id="cancel-button">Cancelar</a></div>
-        </div>
-    </div>
+<body style="background-image: url(./img/fondo-login.jpg);background-size: 100%;" >
+    <section class="formulario-login">
+        <form class="cmxform" id="fdatos" method="get" action="#">
+                <h4>Modificar Datos</h4>
+                <label for="nombreu">Nombre de usuario</label>
+                <input class="controles" type="text" name="nombreu" id="nombreu" minlength="2" placeholder="Ingrese su Nombre" required>
+                <label for="correo">Correo</label>
+                <input class="controles" type="email" name="correo" id="correo" minlength="2" placeholder="Ingrese su Correo" required>
+                <label for="telefono">Telefono</label>
+                <input class="controles" type="number" name="telefono" id="telefono" minlength="7" placeholder="Ingrese su telefono/Celular" required>
+                <label for="contraseña">Contraseña</label>
+                <input class="controles" type="password" name="contraseña" id="contraseña" minlength="6" placeholder="Ingrese su Contraseña" required>
+                <input type="checkbox" name="tyc" id="tyc" required><label for="tyc"> Acepto cambiar datos (no se podran cambiar nuevamente en 3 dias) </label>
+                <input class="botones" type="submit" value="Actualizar datos">
+                <button class="botones"><a href="./cuenta.html">Regresar</a></button>
+        </form>
+        
+    </section>
+
+    
 </body>
+
 </html>
