--- a/html/Login.html
+++ b/html/Login.html
@@ -8,7 +8,8 @@
     <link rel='stylesheet' type='text/css' media='screen' href='./css/formulario-login.css'>
     <link rel="stylesheet" href="./css/formulario-login |.css">
     <script src='./js/login.js'></script>
-    <script src='./js/mantenedor.js'></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
 </head>
 <body style="background-image: url(./img/fondo-login.jpg);background-size: 100%;" >
     <section class="formulario-login">
