--- a/html/popupm.html
+++ b/html/popupm.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <body style="background-image: url(./img/fondo-login.jpg);background-size: 100%;">
+        <form class="cmxform" id="commentForm" method="get" action="./Mantenedor.html">  
         <div id="wrapper">
           <div id="first">
              <div class="vertical-menu">
@@ -31,10 +32,11 @@
                         <p>Imposiciones <input type="text" required></p>
                         <p>Bono transporte <input type="text" required></p>
                         <p>Bonos adicionales <input type="text" required></p>
-                    <div class="botones"><a href="./Mantenedor.html" id="close-button">Modificar</a></div>
+                    <div class="botones"><a href="./Mantenedor.html" id="close-button">Modificar</a>
+                    </div>
                 </div>
          </div>   
-       
     </div>
+</form>
 </body>
 </html>
