--- a/html/popupe.html
+++ b/html/popupe.html
@@ -5,11 +5,11 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel='stylesheet' type='text/css' media='screen' href='css/formulario-login.css'>
+    <link rel="stylesheet" href="./css/formulario-login.css">
     <script src='main.js'></script>
 </head>
-<body>
+<body style="background-image: url(./img/fondo-login.jpg);background-size: 100%;">
     <div class="window-notice" id="window-notice">
         <div class="content">
             <div class="content-text">El usuario Ha sido Eliminado 
