--- a/html/popupm.html
+++ b/html/popupm.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <script src='main.js'></script>
 </head>
-<body>
+<body style="background-image: url(./img/fondo-login.jpg);background-size: 100%;">
     <div class="window-notice" id="window-notice">
         <div class="content">
             <header><h2>Panel de Modificaciones</h2></header>
