--- a/html/Login.html
+++ b/html/Login.html
@@ -17,7 +17,7 @@
                 <label for="correo">Correo</label>
                 <input class="controles" type="email" name="correo" id="correo" minlength="2" placeholder="Ingrese su Correo" required>
                 <label for="contraseña">Contraseña</label>
-                <input class="controles" type="password" name="contraseña" id="contraseña" minlength="6" placeholder="Ingrese su Contraseña" required>
+                <input class="controles" type="password" name="contraseña" id="contraseña" minlength="6" maxlength="20" placeholder="Ingrese su Contraseña" required>
                 <p>¿No tienes Cuenta?<a href="./Registro.html"> Registrarse</a></p>
                 <p>¿Olvidaste tu contraseña?<a href=""> Recuperar contraseña</a></p>
                 <input class="botones" type="submit" value="Ingresar">
