--- a/html/datos.html
+++ b/html/datos.html
@@ -7,9 +7,10 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='./css/formulario-login.css'>
     <link rel="stylesheet" href="./css/formulario-login.css">
-    <script src='main.js'></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ jquery-validation@1.19.3 /dist/jquery.validate.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ jquery-validation@1.19.3 /dist/jquery.validate.min.js"></script>
+    <script src='cuenta.js'></script>
+
 </head>
 <body style="background-image: url(./img/fondo-login.jpg);background-size: 100%;" >
     <section class="formulario-login">
@@ -20,7 +21,7 @@
                 <label for="correo">Correo</label>
                 <input class="controles" type="email" name="correo" id="correo" minlength="2" placeholder="Ingrese su Correo" required>
                 <label for="telefono">Telefono</label>
-                <input class="controles" type="number" name="telefono" id="telefono" minlength="7" placeholder="Ingrese su telefono/Celular" required>
+                <input class="controles" type="number" name="telefono" id="telefono" minlength="7" maxlength="9" placeholder="Ingrese su telefono/Celular (7 numeros min)" required>
                 <label for="contraseña">Contraseña</label>
                 <input class="controles" type="password" name="contraseña" id="contraseña" minlength="6" placeholder="Ingrese su Contraseña" required>
                 <input type="checkbox" name="tyc" id="tyc" required><label for="tyc"> Acepto cambiar datos (no se podran cambiar nuevamente en 3 dias) </label>
@@ -30,7 +31,7 @@
         
     </section>
 
-    
+   
 </body>
 
 </html>
