--- a/html/Login.html
+++ b/html/Login.html
@@ -13,11 +13,11 @@
 </head>
 <body style="background-image: url(./img/fondo-login.jpg);background-size: 100%;" >
     <section class="formulario-login">
-        <form class="form-group" id="loginform" method="get" action="./Mantenedor.html">
+        <form class="form-group" id="loginform" method="get" action="./cuenta.html">
                 <h4>Login</h4>
                 <label for="correo">Correo</label>
                 <input class="controles" id="correo" name="correo" placeholder="Ingrese su Correo">
-                <br>
+                <br><br>
                 <label for="contraseña">Contraseña</label>
                 <input class="controles" type="password" name="contraseña" id="contraseña" minlength="6" placeholder="Ingrese su Contraseña">
                 <p>¿No tienes Cuenta?<a href="./Registro.html"> Registrarse</a></p>
