--- a/html/Registro.html
+++ b/html/Registro.html
@@ -7,33 +7,29 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='./css/formulario-login.css'>
     <link rel="stylesheet" href="./css/formulario-login.css">
-    <script src='main.js'></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.0/dist/jquery.validate.js"></script>
 </head>
 <body style="background-image: url(./img/fondo-login.jpg);background-size: 100%;" >
     <section class="formulario-login">
-        <form class="cmxform" id="commentForm" method="get" action="./Login.html">
+        <form class="form-group" id="register-form" method="get" action="./Login.html">
                 <h4>Registro de Usuario</h4>
                 <label for="nombres">Nombre</label>
-                <input class="controles" type="text" name="nombres" id="nombres" minlength="2" placeholder="Ingrese su Nombre" required>
+                <input class="controles" name="nombre" id="nombre" placeholder="Ingrese su Nombre" required>
                 <label for="apellidos">Apellidos</label>
-                <input class="controles" type="text" name="apellidos" id="apellidos" minlength="2" placeholder="Ingrese sus Apellidos" required>
+                <input class="controles" name="apellido" id="apellido" placeholder="Ingrese sus Apellidos" required>
                 <label for="correo">Correo</label>
-                <input class="controles" type="email" name="correo" id="correo" minlength="2" placeholder="Ingrese su Correo" required>
+                <input class="controles" name="correo" id="correo" placeholder="Ingrese su Correo" required>
+                <label for="telefono">Telefono</label>
+                <input class="controles" name="telefono" id="telefono" placeholder="Ingrese su Telefono" required>
                 <label for="contraseña">Contraseña</label>
-                <input class="controles" type="password" name="contraseña" id="contraseña" minlength="6" placeholder="Ingrese su Contraseña" required>
+                <input class="controles" name="contraseña" id="contraseña" placeholder="Ingrese su Contraseña" required>
                 <input type="checkbox" name="tyc" id="tyc" required><label for="tyc"> Acepto los <a href="">Terminos y condiciones</a></label>
                 <input class="botones" type="submit" value="Registrarse">
         </form>
     </section>
-
-    <script>
-		var require = {
-			paths: {
-				"jquery": "../../lib/jquery-3.1.1"
-			}
-		};
-		</script>
-		<script src="../../lib/require.js" data-main="app.js"></script>
+    <script src='./js/registro.js'></script>
 </body>
 
 </html>
