--- a/html/Registro.html
+++ b/html/Registro.html
@@ -16,20 +16,19 @@
         <form class="form-group" id="register-form" method="get" action="./Login.html">
                 <h4>Registro de Usuario</h4>
                 <label for="nombres">Nombre</label>
-                <input class="controles" name="nombre" id="nombre" placeholder="Ingrese su Nombre" required>
+                <input class="controles" name="nombre" id="nombre" placeholder="Ingrese su Nombre">
                 <label for="apellidos">Apellidos</label>
-                <input class="controles" name="apellido" id="apellido" placeholder="Ingrese sus Apellidos" required>
+                <input class="controles" name="apellido" id="apellido" placeholder="Ingrese sus Apellidos">
                 <label for="correo">Correo</label>
-                <input class="controles" name="correo" id="correo" placeholder="Ingrese su Correo" required>
+                <input class="controles" name="correo" id="correo" placeholder="Ingrese su Correo">
                 <label for="telefono">Telefono</label>
-                <input class="controles" name="telefono" id="telefono" placeholder="Ingrese su Telefono" required>
+                <input class="controles" name="telefono" id="telefono" placeholder="Ingrese su Telefono">
                 <label for="contraseña">Contraseña</label>
-                <input class="controles" name="contraseña" id="contraseña" placeholder="Ingrese su Contraseña" required>
+                <input class="controles" name="contraseña" id="contraseña" placeholder="Ingrese su Contraseña">
                 <input type="checkbox" name="tyc" id="tyc" required><label for="tyc"> Acepto los <a href="">Terminos y condiciones</a></label>
                 <input class="botones" type="submit" value="Registrarse">
         </form>
     </section>
     <script src='./js/registro.js'></script>
 </body>
-
 </html>
