--- a/html/Mantenedor.html
+++ b/html/Mantenedor.html
@@ -90,6 +90,8 @@
           <td><a href="./popupm.html">Modificar</a></td>
         </tr>
     </table>
+    <br><br>
+    <a class="botones" href="./agregar.html">Agregar</a>
   </div>   
 </body>
 </html>
