--- a/html/Login.html
+++ b/html/Login.html
@@ -22,7 +22,7 @@
                 <input class="controles" type="password" name="contraseña" id="contraseña" minlength="6" placeholder="Ingrese su Contraseña">
                 <p>¿No tienes Cuenta?<a href="./Registro.html"> Registrarse</a></p>
                 <p>¿Olvidaste tu contraseña?<a href=""> Recuperar contraseña</a></p>
-                <input class="botones" type="submit" value="Ingresar">
+                <input class="botones" id="ingresar" type="submit" value="Ingresar">
         </form>
     </section>
     <script src='./js/login.js'></script>
