--- a/html/Registro.html
+++ b/html/Registro.html
@@ -17,16 +17,22 @@
                 <h4>Registro de Usuario</h4>
                 <label for="nombres">Nombre</label>
                 <input class="controles" name="nombre" id="nombre" placeholder="Ingrese su Nombre">
-                <label for="apellidos">Apellidos</label>
+                <br><br>
+                <label for="apellidos">Apellido</label>
                 <input class="controles" name="apellido" id="apellido" placeholder="Ingrese sus Apellidos">
+                <br><br>
                 <label for="correo">Correo</label>
                 <input class="controles" name="correo" id="correo" placeholder="Ingrese su Correo">
+                <br><br>
                 <label for="telefono">Telefono</label>
                 <input class="controles" name="telefono" id="telefono" placeholder="Ingrese su Telefono">
+                <br><br>
                 <label for="contraseña">Contraseña</label>
-                <input class="controles" name="contraseña" id="contraseña" placeholder="Ingrese su Contraseña">
-                <input type="checkbox" name="tyc" id="tyc" required><label for="tyc"> Acepto los <a href="">Terminos y condiciones</a></label>
-                <input class="botones" type="submit" value="Registrarse">
+                <input class="controles" type="password" name="contraseña" id="contraseña" placeholder="Ingrese su Contraseña">
+                <br><br>
+                <input type="checkbox" name="tyc" id="tyc" required>
+                <label for="tyc"><a href="">Aceptar Terminos y condiciones</a></label>
+                <input class="botones" id="registrarse" type="submit" value="Registrarse">
         </form>
     </section>
     <script src='./js/registro.js'></script>
